--- a/src/scss/core/variables.scss
+++ b/src/scss/core/variables.scss
@@ -1,5 +1,5 @@
 //========  GLOBAL VARIABLES ======== //
-$baseFontSize: 				16;
+$rem-baseline:              16px;
 $backgroundColor: 			#ffffff;
 $footerBackgroundColor:		#000000;
 $defaultTextColor: 			#000000;
