--- a/src/scss/core/core.scss
+++ b/src/scss/core/core.scss
@@ -1,5 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800&subset=latin,latin-ext);
 @import "variables";
+@import "rem";
+
 
 
 * {
@@ -10,10 +12,11 @@
 html, body {
   font-family: 'Open Sans', sans-serif;
   background-color: $backgroundColor;
-  font-size: 16px;
+  @include rem-baseline;
   height: 100%;
   @media screen and (max-width: $screen-sm) {
     height: auto;
   }
+
 }
 
