--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,5 +1,6 @@
 //========  GLOBAL VARIABLES ======== //
 $rem-baseline:              16px;
+$btnFontSize:               18px;
 $backgroundColor: 			#ffffff;
 $footerBackgroundColor:		#000000;
 $defaultTextColor: 			#000000;
