--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 //Core variables and css
 @import "core/variables";
 @import "core/core";
+@import "core/links";
 @import "core/hamburgers/hamburgers/hamburgers";
 @import "core/iconfont";
 
