--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -36,6 +36,6 @@
         </div-->
     </div>
 </div>
-<script type="text/javascript" src="js/scripts.min.js"></script>
+<script type="text/javascript" src="dist/js/scripts.min.js"></script>
 </body>
 </html>
