--- a/src/scss/style-index.scss
+++ b/src/scss/style-index.scss
@@ -14,6 +14,9 @@ html, body {
   background-color: $backgroundColor;
   font-family: "Open Sans", sans-serif;
 }
+h1{
+  margin-top: 25px;
+}
 
 figure {
   text-align: center;
@@ -33,7 +36,7 @@ figure {
 
     }
   }
-  @media screen and (max-width: $screen-md) {
+  @include media-breakpoint-down(md) {
     margin: 20px auto;
   }
 
