--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,51 +1,31 @@
 //External libs
-@import "lib/bootstrap";
+@import 'lib/libs';
 
 //Font Awesome for icons
-@import "font_awesome/font-awesome";
-
-//Animations
-@import "animations/bounce";
-@import "animations/shake";
-@import "animations/rotate";
+@import 'font_awesome/font-awesome';
 
 //Core variables and css
-@import "core/variables";
-@import "core/core";
-@import "core/links";
-@import "core/hamburgers/hamburgers/hamburgers";
-@import "core/iconfont";
+@import 'core/variables';
+@import 'core/core';
+@import 'core/hamburgers/hamburgers/hamburgers';
+@import 'core/iconfont';
 
 //UIcomponents
-@import "ui-components/button";
-@import "ui-components/carousel";
-@import "ui-components/dropdown";
-@import "ui-components/flash_message";
-@import "ui-components/modal";
-@import "ui-components/pagination";
-@import "ui-components/table";
+@import 'ui-components/components';
 
-//form
-@import "form/placeholder";
-@import "form/checkbox";
-@import "form/radio";
-@import "form/text_input";
-@import "form/textarea";
 //layout
-@import "layout/header";
-@import "layout/aside";
-@import "layout/content";
-@import "layout/footer";
+@import 'layout/layout';
+
+//form components
+@import 'form/form.scss';
 
 //media
-@import "media/image";
-@import "media/map";
-@import "media/video";
+@import 'media/media';
+
+//Animations
+@import 'animations/animations';
 
 //responsive
-@import "responsive/lg";
-@import "responsive/md";
-@import "responsive/sm";
-@import "responsive/xs";
+@import 'responsive/responsive';
 
 
